--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "express",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "nodemon ./index.js --exec babel-node"
   },
@@ -22,5 +21,6 @@
     "@babel/core": "^7.24.0",
     "@babel/node": "^7.23.9",
     "@babel/preset-env": "^7.24.0"
-  }
+  },
+  "description": ""
 }
